--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -73,7 +73,19 @@
     <div class="grid__item product-single__photos {{ product_image_width }}{% if section.settings.image_size == 'full' %} product-single__photos--full{% endif %}">
 
 
-
+      <div class="product-slider-thumbnails">
+        {% for image in product.images %}
+          {% capture img_id %}FeaturedImage-{{ section.id }}-{{ image.id }}{% endcapture %}
+          {% capture img_class %}product-featured-img{% endcapture %}
+          {%- assign img_url = image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
+          
+        <div class="image-container">
+          <a href="javascript:void(0);" >
+            <img src="{{ image | img_url: '800x800' }}" alt="{{ image.alt | escape }}"/>
+          </a>
+        </div>
+        {% endfor %}
+      </div>
       <div class="product-slider">
         {%- assign featured_image = product.selected_or_first_available_variant.featured_image | default: product.featured_image -%}
         {% for image in product.images %}
