--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -119,6 +119,17 @@ _affirm_config = {
   {% include 'bc-sf-filter-style' %}
 <!--end-bc-sf-filter-css-->
 
+  <!-- Hotjar Tracking Code for https://eugeniakim.com/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:2004716,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 
 </head>
 
