updates to customized pdp

--- a/assets/customizer.scss.liquid
+++ b/assets/customizer.scss.liquid
@@ -250,14 +250,14 @@
   	display: inline-block;
 }
 
-.product-slide-custom-product .product-slide img {
+/* .product-slide-custom-product .product-slide img {
 	display: none;
 }
 
 .product-slide-custom-product .product-slide img.image-visible {
 	display: block;
 }
-
+ */
 body {
   counter-reset: steps-counter 0 section 0;
  
@@ -312,8 +312,8 @@ form.product-form.product-form-product-customizable-template .product-form__btn-
 }
 
 header.is-moved-by-drawer.site-header.logo--left {
-    max-height: 100px;
-    overflow: hidden;
+/*     max-height: 100px; */
+/*     overflow: hidden; */
 }
 
 .lower_photos {
