--- a/sections/cart-template.liquid
+++ b/sections/cart-template.liquid
@@ -156,6 +156,10 @@
   {% endif %}
 </div>
 
+<script>
+  $( ".ajaxcart__product" ).wrapAll( "<div class='new2' />");
+</script>
+
 {% schema %}
   {
     "name": "Cart page",
