--- a/sections/customizer-steps.liquid
+++ b/sections/customizer-steps.liquid
@@ -13,6 +13,20 @@
             {% assign column_width = 'small--one-half medium-up--one-third' %}
           {% when 8 %}
             {% assign column_width = 'small--one-half medium-up--one-third' %}
+ 		{% when 9 %}
+            {% assign column_width = 'small--one-half medium-up--one-third' %}
+ 			{% when 10 %}
+            {% assign column_width = 'small--one-half medium-up--one-third' %}
+ 			{% when 11 %}
+            {% assign column_width = 'small--one-half medium-up--one-third' %}
+ 			{% when 12 %}
+            {% assign column_width = 'small--one-half medium-up--one-third' %}
+ 		{% when 13 %}
+            {% assign column_width = 'small--one-half medium-up--one-third' %}
+ 		{% when 14 %}
+            {% assign column_width = 'small--one-half medium-up--one-third' %}
+		 {% when 15 %}
+            {% assign column_width = 'small--one-half medium-up--one-third' %}
         {% endcase %}
 
         
@@ -62,7 +76,7 @@
 {% schema %}
   {
     "name": "Customizer Collection",
-    "max_blocks": 8,
+     "max_blocks": 15,
     "blocks": [
       {
         "type": "text",
