--- a/snippets/product-image-custom.liquid
+++ b/snippets/product-image-custom.liquid
@@ -1,4 +1,9 @@
-<div class="grid-view-item{% unless product.available %} product-price--sold-out grid-view-item--sold-out{% endunless %}">
+<div 
+     class="grid-view-item{% unless product.available %} product-price--sold-out grid-view-item--sold-out{% endunless %}
+            
+            "
+     
+  >
 
 
       <a class="grid-view-item__link grid-view-item__image-container"
