--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -39,14 +39,14 @@
     {% if current_variant.compare_at_price > current_variant.price %}
       <span class="medium-up--hide sale__label">Final Sale</span>
     {% endif %}
-    <h1 itemprop="name" class="medium-up--hide product-single__title">{{ product.title }}</h1>
+    <h1 itemprop="name" class="medium-up--hide product-single__title pdp-desk">{{ product.title }}</h1>
 
     <div class="product-section-container" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
       <meta itemprop="priceCurrency" content="{{ shop.currency }}">
 
       <link itemprop="availability" href="http://schema.org/{% if product.available %}InStock{% else %}OutOfStock{% endif %}">
 
-      <p class="medium-up--hide product-single__price product-single__price-{{ section.id }}{% unless current_variant.available %} product-price--sold-out{% endunless %}">
+      <p class="pdp-desk medium-up--hide product-single__price product-single__price-{{ section.id }}{% unless current_variant.available %} product-price--sold-out{% endunless %}">
         {% if current_variant.compare_at_price > current_variant.price %}
             <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
             <s class="compare-price">{{ current_variant.compare_at_price | money }}</s>
@@ -117,6 +117,36 @@
       </div>
 
     </div>
+      
+      
+      
+       <h1 itemprop="name" class="medium-up--hide product-single__title pdp-mob">{{ product.title }}</h1>
+      
+       <p class="medium-up--hide product-single__price product-single__price-{{ section.id }}{% unless current_variant.available %} product-price--sold-out{% endunless %}">
+        {% if current_variant.compare_at_price > current_variant.price %}
+            <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
+            <s class="compare-price">{{ current_variant.compare_at_price | money }}</s>
+            <span class="product-price__price product-price__price-{{ section.id }} product-price__sale product-price__sale--single">
+              <span id="ProductPrice-{{ section.id }}"
+                itemprop="price" content="{{ current_variant.price | divided_by: 100.00 }}">
+                {{ current_variant.price | money }}
+              </span>
+            </span>
+            <br>
+            <!-- <s class="compare-price">(You save {{ current_variant.compare_at_price | minus: current_variant.price | money }} )</s> -->
+        {% else %}
+          <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
+          <s class="hide">{{ current_variant.compare_at_price | money }}</s>
+          <span class="product-price__price product-price__price-{{ section.id }}">
+            <span id="ProductPrice-{{ section.id }}"
+              itemprop="price" content="{{ current_variant.price | divided_by: 100.00 }}">
+              {{ current_variant.price | money }}
+            </span>
+          </span>
+        {% endif %}
+      </p>
+      
+      
 
     <div class="grid__item large-up--one-third medium--one-half product_description_item">
       <div class="product-single__meta">
@@ -158,7 +188,7 @@
           </p>
 
       {% if product.description != blank %}
-  		  <div class="rte product-single__description" itemprop="description">
+  		  <div class="rte product-single__description pdp-desk" itemprop="description">
           {{ product.description }}
         </div>
       {% endif %}
@@ -230,17 +260,71 @@
 
 
  <p class="affirm-as-low-as" data-page-type="product" data-amount="{{current_variant.price}}"></p>
+          
+       
+     <ul class="vertical menu accordion-menu pdp-desc-mob" data-accordion-menu>
+        <li>
+          <a class="accordion-a" href="#">
+            Product Details
+             <img class="dropdown-symbol"  src="{{'plus.svg' | asset_url}}" />
+             <img class="d-none dropdown-symbol" src="{{'minus.svg' | asset_url}}" />
+          </a>
+          <ul class="menu vertical nested">
+            <li>
+            	 {% if product.description != blank %}
+                     <div class="rte product-single__description pdp-desc-mob" itemprop="description">
+                        {{ product.description }}
+                      </div>
+                    {% endif %} 
+            </li>
+           
+          </ul>
+        </li>
+        <li>
+          <a class="accordion-a" href="#">
+            Storage &amp; Care
+             <img class="dropdown-symbol" src="{{'plus.svg' | asset_url}}" />
+             <img class="d-none dropdown-symbol" src="{{'minus.svg' | asset_url}}" />
+          </a>
+          <ul class="menu vertical nested">
+            <li>
+            	  <div class="product__details pdp-details-mob">
+                    {% if product.metafields.c_f.product_size_info %}
+                      <p>{{ product.metafields.c_f.product_size_info }}</p>
+                    {% endif %}
+                     {% comment %}
+                    {% if product.metafields.c_f.product_style_info %}
+                      <p>{{ product.metafields.c_f.product_style_info }}</p>
+                    {% endif %}
+                    {% endcomment %}
+                    {% if product.metafields.c_f.product_orgin_info %}
+                      <p>{{ product.metafields.c_f.product_orgin_info }}</p>
+                    {% endif %}
+                    {% if product.metafields.c_f.product_cleaning_info %}
+                      <p>{{ product.metafields.c_f.product_cleaning_info }}</p>
+                    {% endif %}
 
-        {% if section.settings.show_share_buttons %}
+                    <p class="product__details--link storage-care__link"><a href="/pages/storage-and-care" target="_blank">Storage &amp; Care</a><p>
+                    {% comment %}<div class="storage-care__dropdown"> {{ pages['storage-and-care'].content }} </div>{% endcomment %}
+                    {% comment %}<p class="product__details--link size-guide__link"><a href="#">Size Guide</a></p>{% endcomment %}
+                    {% comment %}<div class="size-guide__dropdown">{{ pages['size-guide'].content }}</div>{% endcomment %}
+                  </div>
+            </li>    
+          </ul>
+        </li>
+      </ul>      
+          
+         
+       {% if section.settings.show_share_buttons %}
           {% include 'social-sharing', share_title: product.title, share_permalink: product.url, share_image: product %}
         {% endif %}
-{% if product.available == false %}
-  <button id="BIS_trigger" class="btn product-form__cart-submit product-form__cart-submit--small AddToCart">NOTIFY ME WHEN BACK IN STOCK.</button>
-{% endif %}
+            {% if product.available == false %}
+              <button id="BIS_trigger" class="btn product-form__cart-submit product-form__cart-submit--small AddToCart">NOTIFY ME WHEN BACK IN STOCK.</button>
+            {% endif %}
            </div>
 
         <!--Product Details -->
-        <div class="product__details">
+        <div class="product__details pdp-desk">
 
           {% if product.metafields.c_f.product_size_info %}
           	<p>{{ product.metafields.c_f.product_size_info }}</p>
@@ -317,7 +401,7 @@
   </script>
 {% endunless %}
   
-  
+
 {% schema %}
   {
     "name": "Product pages",
