--- a/sections/product-customizable-template.liquid
+++ b/sections/product-customizable-template.liquid
@@ -96,6 +96,9 @@
       	</div>
         
         
+      
+        
+        
         <div class="lower_photos">
           	<div class="ek-steps">
               	<span class="icon icon-trim-color"></span>
@@ -123,6 +126,9 @@
 
           <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
             
+            
+            
+           
             
             
             
@@ -155,6 +161,13 @@
             </p>
             
             
+            
+            
+            {%if section.settings.custom-text%}
+            <div class="sk-custom-text">
+              <p>{{section.settings.custom-text}}</p>
+            </div>
+            {%endif%}
             
             
             
@@ -485,6 +498,11 @@
         "id": "show_share_buttons",
         "label": "Show social sharing buttons",
         "default": true
+      },
+  	  {
+         "type": "textarea",
+         "id": "custom-text",
+         "label": "Custom Text"
       },
   	  {
          "type": "text",
