[BF] Mobile PLP Changes

--- a/assets/bc-sf-filter.scss.liquid
+++ b/assets/bc-sf-filter.scss.liquid
@@ -72,12 +72,12 @@ $searchBoxMobileHeight: 50px;
 
 .shop-filter-desctop-mobile{
 	background: transparent;
-    border: 1px solid #000;
-    width: 170px;
-    line-height: 45px;
-    text-align: left;
-    padding: 0 25px;
-  margin-bottom: 15px;
+  border: 1px solid #000;
+  width: 100%;
+  height: 46px;
+  line-height: 45px;
+  text-align: left;
+  padding: 0 25px;
   position:relative;
   text-transform: uppercase;
 }
@@ -206,6 +206,8 @@ $searchBoxMobileHeight: 50px;
 	opacity: 0.5;
   border: none !important;
 }
+
+
 
 @media only screen and (min-width: 850px){
   .filters-toolbar-wrapper{
