--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -1592,8 +1592,9 @@ $grid-breakpoints: (
   background-size: cover;
 
   @include media-query($small) {
-    padding-left: $grid-gutter-mobile;
+    padding: 0;
   }
+  
 
   &[class*="--push"] {
     position: relative;
@@ -6212,15 +6213,23 @@ $toolbar-height-small: 46px;
 .filters-toolbar {
   @include display-flexbox();
   @include align-items(center);
+  @include justify-content(space-between);
+  flex-wrap: wrap;
 }
 
 .filters-toolbar__item {
   min-width: 33%;
-  @include flex(1 1 33%);
-
+  @include flex(0.45 1 33%);
   .no-flexbox & {
     // sass-lint:disable no-important
     text-align: left !important;
+  }
+  
+  @media screen and (max-width: 767px){
+    border: 1px solid rgba(0,0,0,0.5);
+    button {
+      border: none;
+    }
   }
 }
 
@@ -6261,8 +6270,6 @@ $toolbar-height-small: 46px;
 }
 
 .filters-toolbar__input--sort {
-  margin-right: -10px;
-
   .no-flexbox & {
     margin: 0;
   }
@@ -8023,6 +8030,9 @@ $toolbar-height-small: 46px;
   padding: 0 0 100% 0 !important;
   height: auto !important;
   position: relative;
+  @media screen and (max-width: 767px){
+    padding: 0 !important;
+  }
 }
 
 
@@ -8035,6 +8045,10 @@ $toolbar-height-small: 46px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  @media screen and (max-width: 767px){
+    position: static;
+    transform: none;
+  }
 }
 
 
